@@ -22,8 +22,8 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2013-01-10</date>
- <time>14:37:11</time>
+ <date>2013-01-18</date>
+ <time>12:43:31</time>
  <version>
   <release>6.0.4</release>
   <api>6.0.0</api>
@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix saving mailbox expansion state in basic folders view (Bug #11979).
 * [mms] Hide attachment upload UI in dynamic view if file uploads are disabled.
 * [jan] Fix JavaScript errors with Internet Explorer 8.
 * [mms] Fix display of mail log icons on the basic message page (Bug #11964).
@@ -99,6 +100,7 @@
        <file name="Common.php" role="horde" />
        <file name="Dynamic.php" role="horde" />
        <file name="ImageUnblock.php" role="horde" />
+       <file name="Mboxtoggle.php" role="horde" />
        <file name="Passphrase.php" role="horde" />
        <file name="Search.php" role="horde" />
        <file name="Smartmobile.php" role="horde" />
@@ -1387,6 +1389,7 @@
    <install as="imp/lib/Ajax/Application/Handler/Common.php" name="lib/Ajax/Application/Handler/Common.php" />
    <install as="imp/lib/Ajax/Application/Handler/Dynamic.php" name="lib/Ajax/Application/Handler/Dynamic.php" />
    <install as="imp/lib/Ajax/Application/Handler/ImageUnblock.php" name="lib/Ajax/Application/Handler/ImageUnblock.php" />
+   <install as="imp/lib/Ajax/Application/Handler/Mboxtoggle.php" name="lib/Ajax/Application/Handler/Mboxtoggle.php" />
    <install as="imp/lib/Ajax/Application/Handler/Passphrase.php" name="lib/Ajax/Application/Handler/Passphrase.php" />
    <install as="imp/lib/Ajax/Application/Handler/Search.php" name="lib/Ajax/Application/Handler/Search.php" />
    <install as="imp/lib/Ajax/Application/Handler/Smartmobile.php" name="lib/Ajax/Application/Handler/Smartmobile.php" />
@@ -2901,9 +2904,10 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2013-01-10</date>
+   <date>2013-01-18</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix saving mailbox expansion state in basic folders view (Bug #11979).
 * [mms] Hide attachment upload UI in dynamic view if file uploads are disabled.
 * [jan] Fix JavaScript errors with Internet Explorer 8.
 * [mms] Fix display of mail log icons on the basic message page (Bug #11964).
